syntax = "proto3";

option csharp_namespace = "GrpcSqlUserService";

package user;

// User registration request message
message RegisterUserRequest {
    string Email = 1;
    string Password = 2;
}

// User registration response message
message RegisterUserResponse {
    string Token = 1;
}

// User login request message
message LoginRequest {
    string Email = 1;
    string Password = 2;
}

// User login response message
message LoginResponse {
    string Token = 1;
}

// Token validation request message
message ValidateTokenRequest {}

// Token validation response message
message ValidateTokenResponse {}

// Password reset request message
message ResetPasswordRequest {
    string email = 1;                 // The email of the user wanting to change their password.
    string current_password = 2;     // The user's current password.
    string new_password = 3;         // The desired new password.
}

// Password reset response message
message ResetPasswordResponse {
    string message = 1;  // Response message indicating the status of the password reset.
}

// Message to request user existence by email
message UserExistsRequest {
    string Email = 1;
}

// Response message for user existence check
message UserExistsResponse {
    bool Exists = 1;
}

message DeactivateUserRequest {
    string Email = 1;
    string Password = 2;
}

message DeactivateUserResponse {
    string message = 1;
}

// User API service definition
service SqlUserService {
    rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse);
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
    rpc ResetPassword(ResetPasswordRequest) returns (ResetPasswordResponse);
    rpc UserExistsByEmail(UserExistsRequest) returns (UserExistsResponse);
    rpc DeactivateUser(DeactivateUserRequest) returns (DeactivateUserResponse);
}
